--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="chat-container">
         <div id="chat-output" class="chat-output">
             <div class="bot-message">
-                <p>Hi there! Ask me anything about Neshwan.</p>
+                <p>Hi there! Ask me anything about Neshwan.Like who is he?</p>
             </div>
             </div>
 
